--- a/models/pythia-12B.yml
+++ b/models/pythia-12B.yml
@@ -8,22 +8,53 @@ release:
   date: '2025-05-22'
   type: language
   architecture: transformer
-  origin: ''
   producer: EleutherAI
-  contact: ''
-  repository: ''
   huggingface: EleutherAI/pythia-12b
-  license: {  }
+  origin: 'Pythia'
+  contact: 'contact@eleuther.ai'
+  repository: 'https://github.com/EleutherAI/pythia'
+  license:
+    distribution:
+      name: Apache-2.0
+      path: ''
   components:
     -
       name: 'Model architecture'
       description: "Well commented code for the model's architecture"
-      license: Apache-2.0
+    -
+      name: 'Data preprocessing code'
+      description: 'Code for data cleansing, normalization, and augmentation'
+    -
+      name: 'Training code'
+      description: 'Code used for training the model'
+    -
+      name: 'Inference code'
+      description: 'Code used for running the model to make predictions'
+    -
+      name: 'Evaluation code'
+      description: 'Code used for evaluating the model'
     -
       name: 'Model parameters (Final)'
       description: 'Trained model parameters, weights and biases'
-      license: Apache-2.0
+    -
+      name: 'Model parameters (Intermediate)'
+      description: 'Trained model parameters, weights and biases'
+    -
+      name: Datasets
+      description: 'Training, validation and testing datasets used for the model'
+    -
+      name: 'Evaluation data'
+      description: 'Data used for evaluating the model'
+    -
+      name: 'Model card'
+      description: 'Model details including performance metrics, intended use, and limitations'
+    -
+      name: 'Data card'
+      description: 'Documentation for datasets including source, characteristics, and preprocessing details'
     -
       name: 'Research paper'
       description: 'Research paper detailing the development and capabilities of the model'
-      license: unlicensed
+      license: CC-BY-4.0
+    -
+      name: 'Evaluation results'
+      description: 'The results from evaluating the model'
