--- a/models/GPT-J.yml
+++ b/models/GPT-J.yml
@@ -6,48 +6,55 @@ release:
   name: GPT-J
   version: 6B
   date: '2024-11-15'
-  license: {  }
   type: language
   architecture: 'transformer decoder'
-  origin: GPT
+  origin: 'GPT-J'
   producer: EleutherAI
-  contact: ''
+  contact: 'contact@eleuther.ai'
   repository: 'https://github.com/kingoflolz/mesh-transformer-jax'
   huggingface: 'https://huggingface.co/EleutherAI/gpt-j-6b'
+  license:
+    distribution:
+      name: Apache-2.0
+      path: ''
   components:
     -
       name: 'Model architecture'
       description: "Well commented code for the model's architecture"
-      license: Apache-2.0
+    -
+      name: 'Data preprocessing code'
+      description: 'Code for data cleansing, normalization, and augmentation'
+    -
+      name: 'Training code'
+      description: 'Code used for training the model'
+    -
+      name: 'Inference code'
+      description: 'Code used for running the model to make predictions'
+    -
+      name: 'Evaluation code'
+      description: 'Code used for evaluating the model'
     -
       name: 'Model parameters (Final)'
       description: 'Trained model parameters, weights and biases'
-      license: Apache-2.0
     -
       name: 'Model parameters (Intermediate)'
       description: 'Trained model parameters, weights and biases'
-      license: Apache-2.0
     -
       name: Datasets
       description: 'Training, validation and testing datasets used for the model'
-      license: unlicensed
     -
-      name: 'Model metadata'
-      description: 'Any model metadata including training configuration and optimizer states'
-      license: unlicensed
+      name: 'Evaluation data'
+      description: 'Data used for evaluating the model'
     -
       name: 'Model card'
       description: 'Model details including performance metrics, intended use, and limitations'
-      license: unlicensed
     -
       name: 'Data card'
       description: 'Documentation for datasets including source, characteristics, and preprocessing details'
-      license: unlicensed
-    -
-      name: 'Technical report'
-      description: 'Technical report detailing capabilities and usage instructions for the model'
-      license: unlicensed
     -
       name: 'Research paper'
       description: 'Research paper detailing the development and capabilities of the model'
-      license: unlicensed
+      license: CC-BY-4.0
+    -
+      name: 'Evaluation results'
+      description: 'The results from evaluating the model'
